    end. (Karthik Kambatla via atm)

    HADOOP-9379. capture the ulimit info after printing the log to the 
    console. (Arpit Gupta via suresh)

    HADOOP-9399. protoc maven plugin doesn't work on mvn 3.0.2 (todd)

    HADOOP-9407. commons-daemon 1.0.3 dependency has bad group id causing
    build issues. (Sangjin Lee via suresh)

Release 2.0.4-alpha - UNRELEASED

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

  OPTIMIZATIONS

  BUG FIXES

    HADOOP-9406. hadoop-client leaks dependency on JDK tools jar. (tucu)

    HADOOP-9301. hadoop client servlet/jsp/jetty/tomcat JARs creating conflicts in Oozie & HttpFS. (tucu)

Release 2.0.3-alpha - 2013-02-06 

  INCOMPATIBLE CHANGES

    HADOOP-8999. SASL negotiation is flawed (daryn)

  NEW FEATURES

    HADOOP-8561. Introduce HADOOP_PROXY_USER for secure impersonation in child
    hadoop client processes. (Yu Gao via llu)

    HADOOP-8597. Permit FsShell's text command to read Avro files.
    (Ivan Vladimirov Ivanov via cutting)

    HADOOP-9020. Add a SASL PLAIN server (daryn via bobby)

    HADOOP-9090. Support on-demand publish of metrics. (Mostafa Elhemali via
    suresh)

    HADOOP-9054. Add AuthenticationHandler that uses Kerberos but allows for 
    an alternate form of authentication for browsers. (rkanter via tucu)

  IMPROVEMENTS

    HADOOP-8789. Tests setLevel(Level.OFF) should be Level.ERROR.
    (Andy Isaacson via eli)

    HADOOP-8755. Print thread dump when tests fail due to timeout. (Andrey
    Klochkov via atm)

    HADOOP-8806. libhadoop.so: dlopen should be better at locating
    libsnappy.so, etc. (Colin Patrick McCabe via eli)

    HADOOP-8812. ExitUtil#terminate should print Exception#toString. (eli)

    HADOOP-3957. Change MutableQuantiles to use a shared thread for rolling
    over metrics. (Andrew Wang via todd)

    HADOOP-8851. Use -XX:+HeapDumpOnOutOfMemoryError JVM option in the forked
    tests. (Ivan A. Veselovsky via atm)
